abstracts secret material type extension and increases mtls ttl to 1year
